# Green-Ninja

./: CMakeLists.txt  README.md  planing.txt
assets/: config.txt  sprites.txt
assets/Rooms/NormalRooms/: NormalRoom1.txt  NormalRoom2.txt  NormalRoom3.txt
assets/Rooms/editor/: editorSalas.py  sala.txt
include/: Enemy.hpp  Entity.hpp  Game.hpp  Grid.hpp  Player.hpp  Projectile.hpp  Room.hpp  RoomType.hpp  Tile.hpp  mapache.hpp
include/green-ninja/: Bat.hpp  ConfigManager.hpp  Enemy.hpp  Entity.hpp  Game.hpp  Grid.hpp  Player.hpp  Projectile.hpp  ProjectileModifier.hpp  ProjectileModifiers.hpp  Room.hpp  SpatialManager.hpp  TextureManager.hpp  Tile.hpp  Tiletype.hpp  configLoader.hpp  mapache.hpp
src/: Enemy.cpp  Game.cpp  Grid.cpp  Main.cpp  Player.cpp  Projectile.cpp  Room.cpp  TextureManager.cpp  Tile.cpp  mapache.cpp
src/core/: ConfigManager.cpp  Game.cpp  SpatialManager.cpp  TextureManager.cpp
src/entities/: Player.cpp  Projectile.cpp  ProjectileModifiers.cpp
src/entities/enemies/: Bat.cpp  Enemy.cpp  mapache.cpp
src/world/: Grid.cpp  Room.cpp  Tile.cpp
